# Interpreter

./: CMakeLists.txt  README.md
examples/: fibonacci.dfs
lib/: CMakeLists.txt  interpreter.cpp  interpreter.h
lib/lexer/: lexer.cpp  lexer.h
lib/parser/: ast.h  parser.cpp  parser.h
lib/runtime/: environment.h  evaluator.cpp  evaluator.h  operations.cpp  operations.h  types.h  utils.cpp  utils.h
tests/: CMakeLists.txt  function_test.cpp  illegal_ops_test.cpp  number_functions_test.cpp  system_functions_test.cpp  types_test.cpp
